<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


            <EditText
                android:layout_width="315dp"
                android:layout_height="62dp"
                android:layout_marginTop="69dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/emailField"
                android:background="#F3F2F2"
                android:hint="@string/hint_email"
                android:textColorHint="#727070"
                android:padding="20dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:layout_width="315dp"
                android:layout_height="62dp"
                android:layout_marginTop="28dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/passwordField"
                android:background="#F3F2F2"
                android:hint="@string/password"
                android:textColorHint="#727070"
                android:padding="20dp"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/error_login"
                android:textColor="#FF0000"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="315dp"
                android:layout_height="62dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/background"
                android:text="@string/btn_sign_in"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="@string/create_acc"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="315dp"
                android:layout_height="62dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/black"
                android:text="@string/btn_sign_up"
                android:textSize="15sp"
                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>