<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

        <View
            android:id="@+id/bg_favorite"
            android:layout_width="450dp"
            android:layout_height="150dp"
            android:background="@drawable/bg_profile">
        </View>

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="-150dp"
            android:layout_marginStart="175dp"
            android:src="@drawable/logout_svgrepo_com"
            android:background="@color/background"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="656dp"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/profileImg"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_profile_image" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:padding="10dp"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:padding="10dp"
                            android:text="@string/email"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/icon_app" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="Наши контакты"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/linkGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_google" />

                <TextView
                    android:id="@+id/linkGmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/link_gmail" />
        </LinearLayout>

</LinearLayout>